--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,15 @@ project(lsm VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-# add_executable(lsm main.cpp)
+
+# 直線近似
 add_executable(line_lsm
     main_line_lsm.cpp
+)
+
+# 2次曲線近似
+add_executable(two_dim_curve_lsm
+    main_2dim_curve_lsm.cpp
 )
 
 # set(CPACK_PROJECT_NAME ${PROJECT_NAME})
